--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#37364b</color>
     <color name="colorPrimaryDark">#040404</color>
     <color name="colorAccent">#ffffff</color>
-    <color name="receitaPrimary">#306F32</color>
+    <color name="receitaPrimary">#008542</color>
     <color name="receitaSecundary">#00A351</color>
     <color name="despesaPrimary">#BB372F</color>
     <color name="despesaSecundary">#B84A43</color>
