--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -53,7 +53,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +83,7 @@
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -109,7 +108,7 @@
         <LinearLayout
             android:layout_width="180dp"
             android:layout_height="match_parent"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -158,7 +157,7 @@
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -183,7 +182,7 @@
         <LinearLayout
             android:layout_width="180dp"
             android:layout_height="match_parent"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -230,7 +229,7 @@
             android:layout_width="180dp"
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -255,7 +254,7 @@
         <LinearLayout
             android:layout_width="180dp"
             android:layout_height="match_parent"
-            android:gravity="bottom"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
