--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -282,6 +282,7 @@
         android:id="@+id/view3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginBottom="2dp"
         android:background="#BDBDBD"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout6" />
 
@@ -300,6 +301,7 @@
             android:id="@+id/tvInicio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_home_gray"
             android:text="@string/inicio"
@@ -322,6 +324,7 @@
             android:id="@+id/tvLimites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_porcentagem_gray"
             android:text="@string/metas"
@@ -333,6 +336,7 @@
             android:id="@+id/tvCategorias"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_engrenagem_gray"
             android:text="@string/categorias"
@@ -344,6 +348,7 @@
             android:id="@+id/tvSair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:drawableTop="@drawable/ic_sair_gray"
             android:text="@string/sair"
             android:textColor="#B4B4B4"
