--- a/app/src/main/res/layout/activity_limites.xml
+++ b/app/src/main/res/layout/activity_limites.xml
@@ -159,6 +159,7 @@
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginBottom="2dp"
         android:background="#BDBDBD"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout6" />
 
@@ -177,6 +178,7 @@
             android:id="@+id/tvInicio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_home_gray"
             android:text="@string/inicio"
@@ -188,6 +190,7 @@
             android:id="@+id/tvGrafico"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_donut_gray"
             android:text="@string/grafico"
@@ -210,6 +213,7 @@
             android:id="@+id/tvCategorias"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_engrenagem_gray"
             android:text="@string/categorias"
@@ -221,6 +225,7 @@
             android:id="@+id/tvSair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:drawableTop="@drawable/ic_sair_gray"
             android:text="@string/sair"
             android:textColor="#B4B4B4"
